Veritabanı bağlantı stringi appsettings..jsonda tanımlandırıldı.

--- a/ToDoWebAPI/appsettings.json
+++ b/ToDoWebAPI/appsettings.json
@@ -1,4 +1,8 @@
 {
+  "ConnectionStrings": 
+  {
+    "DepartmentAppCon": "Data Source=localhost;Initial Catalog=mytestdb;User Id=root;password=1042"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
