--- a/ToDoWebAPI/ToDoWebAPI.csproj
+++ b/ToDoWebAPI/ToDoWebAPI.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="3.1.16" />
+    <PackageReference Include="MySql.Data" Version="8.0.27" />
   </ItemGroup>
 
 
